cmake_minimum_required(VERSION 3.24)
project(csc351_os_ext2)

set(CMAKE_CXX_STANDARD 17)


add_executable(
        csc351_os_ext2
#        app/fs/bitmap.cpp
#        app/fs/bitmap.h
#        app/fs/fs.cpp
#        app/fs/fs.h
#        app/fs/fsm.cpp
#        app/fs/inode.cpp
#        app/fs/inode.h
#        app/fs/server.cpp
#        app/shell/client.cpp
        app/shell/shell.cpp
        app/shell/shell.h
)
